--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "android": "react-native run-android",
+    "android": "react-native run-android --port 9090",
     "ios": "react-native run-ios",
     "lint": "eslint .",
-    "start": "react-native start",
+    "start": "react-native start --port 9090",
     "test": "jest"
   },
   "dependencies": {
+    "axios": "^1.6.7",
     "react": "18.2.0",
     "react-native": "0.73.3"
   },
